--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="iPet's here for love, health, happiness-and with a free first visit for you and your pet. Can't wait to meet you both!">
     <title>iPet</title>
     <link  rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -101,7 +102,7 @@
         </div>
         <div class="modal-body">
             <h3>Making an appointment</h3>
-            <form action="#" method="#">
+            <form>
                 <input type="text" name="name" placeholder="Name" required><br>
                 <input type="tel" name="tel" placeholder="Phone" required><br>
                 <input type="checkbox" required><span>I agree to the processing of personal data</span><br>
